--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </ul>
                 </div>
                 <div class="menu-overlay"></div>
-                <a href="https://www.dropbox.com/scl/fi/iw0gciqmj2vnziodfjnup/FlixStore.apk?rlkey=3b1zgvpvke8bz2x51tf72xhde&st=he4619ol&dl=1" class="btn primary-btn">Download FlixStore</a>
+                <a href="#" class="btn primary-btn maintenance-btn">Under Maintenance</a>
             </nav>
         </div>
     </header>
@@ -47,7 +47,7 @@
                     <h1>Download Premium Apps for Free</h1>
                     <p>FlixStore gives you access to premium applications without the price tag.</p>
                     <div class="hero-buttons">
-                        <a href="https://www.dropbox.com/scl/fi/iw0gciqmj2vnziodfjnup/FlixStore.apk?rlkey=3b1zgvpvke8bz2x51tf72xhde&st=he4619ol&dl=1" class="btn primary-btn">Download FlixStore</a>
+                        <a href="#" class="btn primary-btn maintenance-btn">Under Maintenance</a>
                         <a href="#features" class="btn secondary-btn features-btn">Learn More</a>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                                 </div>
                             </div>
                             <div class="app-download">
-                                <a href="https://www.dropbox.com/scl/fi/iw0gciqmj2vnziodfjnup/FlixStore.apk?rlkey=3b1zgvpvke8bz2x51tf72xhde&st=he4619ol&dl=1" class="btn primary-btn download-android">
+                                <a href="https://www.dropbox.com/scl/fi/slilcapmlxd8wmtwootmo/Eva-IpTv-v1.26-Mod-1.apk?rlkey=zod4mhvbryul26tzl067oqadv&st=5cvq6e8j&dl=1">
                                     <i class="fab fa-android"></i> Download for Android
                                 </a>
                             </div>
@@ -190,7 +190,7 @@
                                 <li><i class="fas fa-check"></i> Easy to install and use</li>
                             </ul>
                             <div class="app-download">
-                                <a href="https://www.dropbox.com/scl/fi/iw0gciqmj2vnziodfjnup/FlixStore.apk?rlkey=3b1zgvpvke8bz2x51tf72xhde&st=he4619ol&dl=1" class="btn primary-btn download-kodi">
+                                <a href="https://www.dropbox.com/scl/fi/1djd6onbwxz4uzgouzhtt/plugin.video.playlistbee-3.1.zip?rlkey=pfi8huumum7csz8o9asmqlukm&st=jd269wdb&dl=1" class="btn primary-btn download-kodi">
                                     <i class="fab fa-android"></i> Download for Kodi
                                 </a>
                             </div>
@@ -216,11 +216,11 @@
                 <div class="download-content">
                     <p>Download our app and get access to premium applications for free.</p>
                     <div class="download-platforms">
-                        <a href="https://www.dropbox.com/scl/fi/iw0gciqmj2vnziodfjnup/FlixStore.apk?rlkey=3b1zgvpvke8bz2x51tf72xhde&st=he4619ol&dl=1" class="platform-btn">
-                            <i class="fab fa-android"></i>
+                        <a href="#" class="platform-btn maintenance-btn">
+                            <i class="fas fa-tools"></i>
                             <div class="platform-text">
-                                <span>Download for</span>
-                                <strong>Android</strong>
+                                <span>FlixStore</span>
+                                <strong>Under Maintenance</strong>
                             </div>
                         </a>
                     </div>
