--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </ul>
                 </div>
                 <div class="menu-overlay"></div>
-                <a href="#" class="btn primary-btn maintenance-btn">Under Maintenance</a>
+                <a href="#" class="btn primary-btn maintenance-btn">Unavailable</a>
             </nav>
         </div>
     </header>
@@ -47,7 +47,7 @@
                     <h1>Download Premium Apps for Free</h1>
                     <p>FlixStore gives you access to premium applications without the price tag.</p>
                     <div class="hero-buttons">
-                        <a href="#" class="btn primary-btn maintenance-btn">Under Maintenance</a>
+                        <a href="#" class="btn primary-btn maintenance-btn">Unavailable</a>
                         <a href="#features" class="btn secondary-btn features-btn">Learn More</a>
                     </div>
                 </div>
@@ -210,17 +210,17 @@
         <section id="download" class="download-app page-section">
             <div class="container">
                 <div class="section-header">
-                    <h2>Get FlixStore Now</h2>
-                    <p>Download our app and get access to premium applications for free</p>
+                    <h2>FlixStore Status</h2>
+                    <p>FlixStore is currently unavailable</p>
                 </div>
                 <div class="download-content">
-                    <p>Download our app and get access to premium applications for free.</p>
+                    <p>Please check back later for updates.</p>
                     <div class="download-platforms">
                         <a href="#" class="platform-btn maintenance-btn">
                             <i class="fas fa-tools"></i>
                             <div class="platform-text">
                                 <span>FlixStore</span>
-                                <strong>Under Maintenance</strong>
+                                <strong>Unavailable</strong>
                             </div>
                         </a>
                     </div>
