--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                     </ul>
                 </div>
                 <div class="menu-overlay"></div>
-                <a href="#" class="btn primary-btn maintenance-btn">Unavailable</a>
+                <a href="https://www.dropbox.com/scl/fi/iw0gciqmj2vnziodfjnup/FlixStore.apk?rlkey=3b1zgvpvke8bz2x51tf72xhde&st=cyioii91&dl=1" class="btn primary-btn">
+                    <i class="fab fa-android"></i> Download FlixStore
+                </a>
             </nav>
         </div>
     </header>
@@ -47,7 +49,9 @@
                     <h1>Download Premium Apps for Free</h1>
                     <p>FlixStore gives you access to premium applications without the price tag.</p>
                     <div class="hero-buttons">
-                        <a href="#" class="btn primary-btn maintenance-btn">Unavailable</a>
+                        <a href="https://www.dropbox.com/scl/fi/iw0gciqmj2vnziodfjnup/FlixStore.apk?rlkey=3b1zgvpvke8bz2x51tf72xhde&st=cyioii91&dl=1" class="btn primary-btn">
+                            <i class="fab fa-android"></i> Download FlixStore
+                        </a>
                         <a href="#features" class="btn secondary-btn features-btn">Learn More</a>
                     </div>
                 </div>
@@ -154,7 +158,7 @@
                                 </div>
                             </div>
                             <div class="app-download">
-                                <a href="https://www.dropbox.com/scl/fi/slilcapmlxd8wmtwootmo/Eva-IpTv-v1.26-Mod-1.apk?rlkey=zod4mhvbryul26tzl067oqadv&st=5cvq6e8j&dl=1">
+                                <a href="https://www.dropbox.com/scl/fi/slilcapmlxd8wmtwootmo/Eva-Iptv.apk?rlkey=zod4mhvbryul26tzl067oqadv&st=nmymipqw&dl=1">
                                     <i class="fab fa-android"></i> Download for Android
                                 </a>
                             </div>
@@ -210,17 +214,17 @@
         <section id="download" class="download-app page-section">
             <div class="container">
                 <div class="section-header">
-                    <h2>FlixStore Status</h2>
-                    <p>FlixStore is currently unavailable</p>
+                    <h2>Get FlixStore Now</h2>
+                    <p>Download our app and get access to premium applications for free</p>
                 </div>
                 <div class="download-content">
-                    <p>Please check back later for updates.</p>
+                    <p>Download our app and get access to premium applications for free.</p>
                     <div class="download-platforms">
-                        <a href="#" class="platform-btn maintenance-btn">
-                            <i class="fas fa-tools"></i>
+                        <a href="https://www.dropbox.com/scl/fi/iw0gciqmj2vnziodfjnup/FlixStore.apk?rlkey=3b1zgvpvke8bz2x51tf72xhde&st=cyioii91&dl=1" class="platform-btn">
+                            <i class="fab fa-android"></i>
                             <div class="platform-text">
                                 <span>FlixStore</span>
-                                <strong>Unavailable</strong>
+                                <strong>Download Now</strong>
                             </div>
                         </a>
                     </div>
